Table row increase in height, fixed alignment text for name/brand. header font bold

--- a/client/src/components/Inventory/inventory.css
+++ b/client/src/components/Inventory/inventory.css
@@ -36,11 +36,6 @@
   background-color: var(--hover-color)
 }
 
-.item-in-stock {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 700;
-}
-
 
 /* inventory media queries for mobile */
 @media screen and (max-width: 390px) {
@@ -110,7 +105,6 @@ table {
   border-radius: 5px;
   overflow: hidden;
   margin-top: 20px;
-  /* background-color: #d3d3d3; */
   max-width: 1200px;
   margin: auto;
 }
@@ -130,10 +124,9 @@ thead td:last-child {
 tr {
   display: flex;
   background-color: #dcdcdc;
-  /* border: 1px solid #dcdcdc; */
   border-radius: 5px;
   color: #242424;
-  align-items: center;
+  height: 56px;
   margin: 3px 0;
 }
 
@@ -142,17 +135,14 @@ tr {
   border:none;
 }
 
-tr:last-child {
-  border-bottom: none;
-}
-
 td {
-  min-height: 50px;
+  min-height: 56px;
   display: flex;
   flex: 1;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  padding: 7px 0;
+  padding: 10px;
+  /* border:1px solid black; */
 }
 
 fieldset {
@@ -164,20 +154,31 @@ fieldset {
 
 
 td.item-description {
-  text-align: center;
   flex: 2;
   font-size: 8px;
 }
 
 .heading-description {
   display: flex;
+  justify-content: flex-start;
+  width: 170px;
+}
+
+.item-in-stock {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
   justify-content: center;
-  width: 205px;
+}
+
+.header-tds {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  justify-content: flex-start;
 }
 
 .dynamic-inputs {
   width: 40px;
-  text-align: center;
+  text-align: right;
   background: rgb(215, 215, 215);
   color: black;
   border-radius: 4px;
@@ -216,10 +217,14 @@ td.item-description {
 
 /* drag and drop */
 
-table tr:hover {
+table thead td:hover {
+  cursor: default;
+}
+
+table td:hover {
   cursor: grab;
 }
-table tr:active {
+table td:active {
   cursor: grabbing;
 }
 
